# DE_Test

./: README.md  api_sample.json  main.py  pyproject.toml  pyspark_coding.py  requirements.txt  test_weather_pipeline.py  weather_pipeline.py
destination/: output.jsonl
